src/qir/snapshots/hugr_qir__qir__tket2_ext__test__emit@pre-mem2reg@llvm14_tket2.quantum.Rz.snap
---
source: src/qir/tket2_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

%QUBIT = type opaque

define %QUBIT* @_hl.main.1(%QUBIT* %0, double %1) {
alloca_block:
  %"0" = alloca %QUBIT*, align 8
  %"2_0" = alloca %QUBIT*, align 8
  %"2_1" = alloca double, align 8
  %"4_0" = alloca %QUBIT*, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store %QUBIT* %0, %QUBIT** %"2_0", align 8
  store double %1, double* %"2_1", align 8
  %"2_01" = load %QUBIT*, %QUBIT** %"2_0", align 8
  %"2_12" = load double, double* %"2_1", align 8
  call void @__quantum__qis__rz__body(double %"2_12", %QUBIT* %"2_01")
  store %QUBIT* %"2_01", %QUBIT** %"4_0", align 8
  %"4_03" = load %QUBIT*, %QUBIT** %"4_0", align 8
  store %QUBIT* %"4_03", %QUBIT** %"0", align 8
  %"04" = load %QUBIT*, %QUBIT** %"0", align 8
  ret %QUBIT* %"04"
}

declare void @__quantum__qis__rz__body(double, %QUBIT*)
